--- a/src/components/Report/index.module.css
+++ b/src/components/Report/index.module.css
@@ -1,46 +1,100 @@
 .reportsSection {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 4vh;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 5vh 1vh;
+  border-radius: 1vh;
 }
-
-.title {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #0099a8;
+.reportDetails {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
-
+.reportHeader {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.reportTitle {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 1vh;
+}
+.uploadIcon {
+  margin-left: 2vh;
+}
+.radioGroup {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 40%;
+}
+.radioGroup label{
+  display: flex;
+  align-items: center;
+}
+.radioGroup input[type='radio'] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 3vh;
+  height: 3vh;
+  border: 2px solid #7747C0;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  background-color: white;
+}
+.radioGroup input[type='radio']::before {
+  content: '';
+  width: 1.5vh;
+  height: 1.5vh;
+  background-color: #7747C0;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .filters {
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .filterLabel {
   display: block;
-  margin: 10px 0 5px;
-  font-weight: bold;
+  margin: 1vh;
 }
 
-.radioGroup {
+.searchInputs{
   display: flex;
-  gap: 10px;
+  justify-content: space-around;
 }
-
-.radioGroup label {
-  display: flex;
-  align-items: center;
-}
-
 .input {
+  width:18vw;
+  font-family: IranSans;
   margin-bottom: 10px;
-  padding: 8px;
+  padding:1vh;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
 .searchButton {
-  background-color: #0099a8;
+  background-color: #7747c0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1vh;
   color: white;
   border: none;
-  padding: 10px 20px;
-  border-radius: 4px;
+  padding: 1vh;
+  width: 20%;
+  border-radius: 1vh;
   cursor: pointer;
 }
 
@@ -68,8 +122,8 @@
   border-radius: 1vh;
 }
 .statusPending {
-  color:#e2a830  ;
-  background-color:#faf3cb;
+  color: #e2a830;
+  background-color: #faf3cb;
 }
 
 .statusSuccess {
