--- a/src/components/Sidebar/index.module.css
+++ b/src/components/Sidebar/index.module.css
@@ -1,88 +1,115 @@
 .sidebar {
-    height: 100vh;
-    background-color: #ffffff;
-    transition: all 0.3s ease-in-out;
+  height: 100vh;
+  margin: 1vh;
+  padding: 1vh;
+  transition: all 0.3s ease-in-out;
+  top: 0;
+  right: 0;
+  font-size: 2vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.closed {
+  width: 4vw;
+}
+
+.open {
+  width: 19vw;
+}
+.bottomBorder{
+  border-bottom: 1px solid #C9D0D8;
+}
+.topSection {
+  width: 100%;
+  position:sticky;
+  top: 2vh;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #C9D0D8;
+
+}
+
+.logo {
+  width: 80%;
+  height: 7vh;
+  color: #242424;
+}
+
+.toggleButton {
+  cursor: pointer;
+}
+
+.menu {
+  position: fixed;
+  top: 10vh;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  flex-grow: 1;
+}
+.menu p{
+  color: #878FA4;
+}
+.menuItem {
+  text-wrap: nowrap;
+  padding: 1.5vh 2vw;
+  cursor: pointer;
+   color: #242424;
+
+}
+
+.itemHeader {
+  display: flex;
+  align-items: center;
+}
+
+.link {
+  color: #242424;
+  text-decoration: none;
+  margin:.5vh 1vw;
+  flex-grow: 1;
+}
+
+.active {
+  border-radius: 1vh;
+  background-color: #7747C0;
+  color: white;
+}
+
+.subMenu {
+  list-style: none;
+  padding-left: 2vw;
+}
+
+.subMenuItem {
+  padding: 1vh 0;
+  display: flex;
+  align-items: center;
+}
+
+.subMenuItem a {
+  margin-left: 1vw;
+  flex-grow: 1;
+}
+
+@media (max-width: 999px) {
+  .sidebarWrapper {
     position: fixed;
     top: 0;
     right: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1001;
   }
-  
+
   .closed {
-    width: 5vw;
+    width: 0;
+    visibility: hidden;
   }
-  
+
   .open {
-    width: 18vw;
+    width: 75vw;
   }
-  
-  .toggleButton {
-    position: absolute;
-    top: 2vh;
-    right: 2vw;
-    cursor: pointer;
-  }
-  
-  .menu {
-    list-style: none;
-    padding: 2vh 0;
-  }
-  
-  .menuItem {
-    padding: 2vh 3vw;
-    display: flex;
-    flex-direction: column;
-    gap: 1vh;
-    cursor: pointer;
-  }
-  
-  .itemHeader {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .link{
-    color: rgb(36, 36, 36);
-    text-decoration: none;
-    margin-left: 1vw;
-    flex-grow: 1;
-  }
-  
-  .active {
-    background-color: #e5e5e5;
-  }
-  
-  .arrow {
-    cursor: pointer;
-  }
-  
-  .subMenu {
-    list-style: none;
-    padding-left: 3vw;
-  }
-  
-  .subMenuItem {
-    padding: 1vh 0;
-    display: flex;
-    align-items: center;
-  }
-  
-  .subMenuItem a {
-    margin-left: 1vw;
-    flex-grow: 1;
-  }
-  
-  @media (max-width: 999px) {
-    .sidebar {
-      position: absolute;
-      left: 0;
-      top: 0;
-      height: 100vh;
-      z-index: 1000;
-    }
-  
-    .closed {
-      left: -18vw;
-    }
-  }
-  
+}
