--- a/src/components/Wallet/index.module.css
+++ b/src/components/Wallet/index.module.css
@@ -1,23 +1,68 @@
-.walletBox {
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 6vh;
+}
+.topWalletBox {
+  display: flex;
+  justify-content: space-around;
+}
+.VisitWallet,
+.HealthPortalWallet {
+  display: flex;
+  width: 47%;
+  border-radius: 1vh;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1vh;
+}
+.VisitWallet {
+  border: 1px solid #aaaaaa;
+}
+.HealthPortalWallet {
+  background-color: #e1dcf8;
+  color: #7747c0;
+}
+.walletName {
+  display: flex;
+  align-items: center;
+}
+.walletName p {
+  margin: 1vh;
+}
+.visitInventory,
+.HealthPortalInventory {
+  border-radius: 1vh;
+  padding: 0.2vh 1vh;
+  background-color: white;
+}
+.visitInventory {
+  color: #50545f;
+  background-color: #eaeaea;
+}
+
+/* MAIN WALLET STYLES START */
+
+.mainWalletBox {
   background-color: #fff;
   padding: 1vh;
   border: solid 3px transparent;
   border-radius: 2vh;
   background: linear-gradient(#ffffff, #ffffff) padding-box,
-  conic-gradient(
-    from 135deg,
-    #9933cc,
-    #e5def0,
-    #a674e3,
-    #e5def0,
-    #9933cc
-  ),
-      border-box;
+    conic-gradient(from 135deg, #9933cc, #e5def0, #a674e3, #e5def0, #9933cc),
+    border-box;
+  display: flex;
+  width: 100%;
+}
+.balanceActions {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
 }
 
 .walletHeader {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -28,51 +73,64 @@
   font-size: 1.2rem;
 }
 
-.chartContainer {
-  margin-top: 20px;
+.balanceRow{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+}
+.balanceRow span{
+  color: #747B8E;
+}
+.balanceRow p{
+  color: #0F973D;
+}
+.actions {
+  display: flex;
+  height: 100%;
+  justify-content: space-around;
 }
 
-.chartPlaceholder {
-  width: 60%;
-  height: 150px;
-  background-color: #f0f0f0;
-  border-radius: 50%;
+.actions div {
+  width: 29%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.2rem;
-  color: #aaa;
-}
-
-.actions {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
-}
-
-.actions div{
-  margin: 5px 0;
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
+  gap: 1vh;
+  padding: 1vh 2vh;
+  border-radius: 1vh;
   cursor: pointer;
 }
 
 .increaseBalance {
-  background-color: #00cc44;
+  background-color: #0F973D;
   color: white;
 }
 
 .convert {
-  background-color: #9966ff;
+  background-color: #7747C0;
   color: white;
 }
 
 .withdraw {
-  background-color: #ff6666;
+  background-color: #D42620;
   color: white;
+}
+
+.chartContainer{
+  width: 40%;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+@media (max-width:999px) {
+  .topWalletBox{
+    flex-direction: column;
+    align-items: center;
+    gap: 1vh;
+  }
+  .VisitWallet,
+.HealthPortalWallet {
+  width: 77%;
+}
 }
