--- a/src/components/Wallet/Chart/index.module.css
+++ b/src/components/Wallet/Chart/index.module.css
@@ -2,12 +2,31 @@
   display: flex;
   align-items: center;
   gap: 1vh;
-  width:100%;
+  width: 100%;
+  position: relative;
 }
+
 .chart {
   width: 60%;
   height: 32vh;
+  position: relative;
 }
+
+.labelCircleOutside {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3vh;
+  height: 3vh;
+  border-radius: 50%;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+}
+
 .legendBox {
   width: 100%;
   display: flex;
@@ -15,12 +34,14 @@
   justify-content: space-between;
   margin-bottom: 1vh;
 }
+
 .legendColor {
-  width: 3vh;
-  height: 3vh;
+  width: 2vh;
+  height: 2vh;
   border-radius: 50%;
   margin-right: 10px;
 }
+
 .legendText {
   display: flex;
   width: 100%;
