--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -4,5 +4,9 @@
   background-color: #ffffff;
 }
 .content {
+  padding-left: 4vh;
   width: 100%;
+}
+@media (max-width:999px) {
+  .content{padding-left: 0;}
 }
